--- a/plays/roles/consul/tasks/install.yml
+++ b/plays/roles/consul/tasks/install.yml
@@ -1,10 +1,19 @@
 ---
-- name: install deps (RHEL)
-  yum:
+
+- name: install epel
+  package:
+    name:
+      - epel-release
+    state: installed
+  when:
+    ansible_os_family == "RedHat"
+
+- name: install deps 
+  package:
     name:
       - unzip
       - jq
-    state: installed
+    state: latest
 
 - name: check archive stat
   stat: path={{ consul_download_folder }}/{{ consul_archive }}
